# frquotes

./: LICENSE  README.md  frquotes.cabal  frquotes.hs  test-frquotes.hs  test-frquotes.out
Text/: FrQuotes.hs
tests/: new.sh
tests/1.t/: TESTRECIPE  stdin  stdout
tests/2.t/: TESTRECIPE  input  output
tests/3.t/: TESTRECIPE  stdin  stdout
tests/defaultQQ.t/: TESTRECIPE  stdin  stdout
tests/haskell-list.t/: TESTRECIPE
tests/immediate-braces.t/: TESTRECIPE  stdin  stdout
tests/qq-v7.t/: TESTRECIPE  stdin  stdout
tests/quote-in-braced-hole.t/: TESTRECIPE  stdin  stdout
tests/quote-list.t/: TESTRECIPE  stdin
