Name:           frquotes
Cabal-Version: >= 1.2
Version:        0.1.0
Copyright:      (c) Nicolas Pouillard
Author:         Nicolas Pouillard
Maintainer:     Nicolas Pouillard <nicolas.pouillard@gmail.com>
Build-Type:     Simple

library
    Build-depends: base>=3.0&&<5
    Exposed-Modules: Text.FrQuotes
    ghc-options: -Wall

executable frquotes
    Build-depends: base>=3.0&&<5
    main-is: frquotes.hs
    ghc-options: -Wall
